--- a/runway.yml
+++ b/runway.yml
@@ -30,7 +30,8 @@ files:
 # The build_steps array allows you to run shell commands at build time. Each
 # Each build step is executed in the order it appears in the array.
 build_steps:
-    - brew install cmake
+    - apt-get -y update
+    - apt-get -y install cmake
     - pip3 install -r requirements.txt
     # The if_gpu and if_cpu directives can be used to run build steps
     # conditionally depending on the build environment.
