--- a/runway.yml
+++ b/runway.yml
@@ -35,5 +35,5 @@ build_steps:
     - pip3 install -r requirements.txt
     # The if_gpu and if_cpu directives can be used to run build steps
     # conditionally depending on the build environment.
-    - if_gpu: echo "Building in a GPU environment..."
+    # - if_gpu: echo "Building in a GPU environment..."
     - if_cpu: echo "Building in a CPU only environment..."
