--- a/runway.yml
+++ b/runway.yml
@@ -32,8 +32,8 @@ files:
 build_steps:
     - apt-get -y update
     - apt-get -y install cmake
-    - pip3 install -r requirements.txt
+    - pip install -r requirements.txt
     # The if_gpu and if_cpu directives can be used to run build steps
     # conditionally depending on the build environment.
-    # - if_gpu: echo "Building in a GPU environment..."
+    - if_gpu: echo "Building in a GPU environment..."
     - if_cpu: echo "Building in a CPU only environment..."
