--- a/runway.yml
+++ b/runway.yml
@@ -33,6 +33,10 @@ build_steps:
     - apt-get -y update
     - apt-get -y install cmake
     - pip install -r requirements.txt
+    - git clone https://github.com/davisking/dlib.git
+    - cd dlib
+    - python setup.py install --yes USE_NEON_INSTRUCTIONS
+    - cd ..
     # The if_gpu and if_cpu directives can be used to run build steps
     # conditionally depending on the build environment.
     - if_gpu: echo "Building in a GPU environment..."
