--- a/runway.yml
+++ b/runway.yml
@@ -1,5 +1,5 @@
 # Specify the version of the runway.yml spec.
-version: 0.1
+version: 0.3
 # Supported python versions are 2.7 and 3.6
 python: 3.6
 # The command to run your model. This value is used as the CMD value in
@@ -30,6 +30,9 @@ files:
 # The build_steps array allows you to run shell commands at build time. Each
 # Each build step is executed in the order it appears in the array.
 build_steps:
+    - apt-get -y update
+    - sudo apt install linuxbrew-wrapper
+    - brew install cmake
     - pip install -r requirements.txt
     # The if_gpu and if_cpu directives can be used to run build steps
     # conditionally depending on the build environment.
