--- a/runway.yml
+++ b/runway.yml
@@ -31,8 +31,7 @@ files:
 # Each build step is executed in the order it appears in the array.
 build_steps:
     - apt-get -y update
-    - sudo apt install linuxbrew-wrapper
-    - brew install cmake
+    - apt-get -y install cmake
     - pip install -r requirements.txt
     # The if_gpu and if_cpu directives can be used to run build steps
     # conditionally depending on the build environment.
