--- a/runway.yml
+++ b/runway.yml
@@ -31,7 +31,13 @@ files:
 # Each build step is executed in the order it appears in the array.
 build_steps:
     - apt-get -y update
-    - apt-get -y install cmake
+    - wget https://github.com/Kitware/CMake/releases/download/v3.15.2/cmake-3.15.2.tar.gz
+    - tar -zxvf cmake-3.15.2.tar.gz
+    - cd cmake-3.15.2
+    - ./bootstrap
+    - make
+    - sudo make install
+    - cd ..
     - pip install -r requirements.txt
     # The if_gpu and if_cpu directives can be used to run build steps
     # conditionally depending on the build environment.
